# nibbler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh
audio_dynamic/libs/: CMakeLists.txt
audio_dynamic/libs/private/: PortAudio.cpp  PortAudio.hpp  SFMLAudio.cpp  SFMLAudio.hpp
audio_dynamic/libs/public/: IAudio.hpp  IAudioConstants.hpp  IAudioTypes.hpp
audio_dynamic/pa_wrapper/: CMakeLists.txt
audio_dynamic/pa_wrapper/private/: PaSound.cpp
audio_dynamic/pa_wrapper/public/: PaSound.hpp
backend/dyn_lib_loader/: CMakeLists.txt
backend/dyn_lib_loader/public/: dyn_lib_loader.hpp
backend/main_loop/: CMakeLists.txt
backend/main_loop/private/: Board.cpp  Players.cpp  Snake.cpp  World.cpp  World_board.cpp  World_events.cpp  World_ui.cpp  lib_path.hpp.in
backend/main_loop/public/: Board.hpp  Players.hpp  Snake.hpp  World.hpp  WorldParams.hpp  WorldTypes.hpp  math_utility.hpp
binary/: nibbler.cpp
binary/main_loop/private/: World.cpp
binary/main_loop/public/: World.hpp  WorldParams.hpp
binary/private/: nibbler.cpp
gfx_dynamic/gl_wrapper/: CMakeLists.txt
gfx_dynamic/gl_wrapper/private/: GLFont.cpp  GLShader.cpp  GLSnake.cpp
gfx_dynamic/gl_wrapper/public/: GLBoard.hpp  GLFont.hpp  GLShader.hpp  GLSnake.hpp
gfx_dynamic/libs/: CMakeLists.txt
gfx_dynamic/libs/private/: GlfwGraphic.cpp  GlfwGraphic.hpp  SDL2Graphic.cpp  SDL2Graphic.hpp  SFMLGraphic.cpp  SFMLGraphic.hpp
gfx_dynamic/libs/public/: IGraphic.hpp  IGraphicConstants.hpp  IGraphicTypes.hpp
gfx_dynamic/loader/: CMakeLists.txt
gfx_dynamic/loader/private/: gfx_loader.cpp
gfx_dynamic_libs/: CMakeLists.txt
gfx_dynamic_libs/gl_wrapper/: CMakeLists.txt
gfx_dynamic_libs/gl_wrapper/private/: GLBoard.cpp  GLSnake.cpp  Shader.cpp
gfx_dynamic_libs/gl_wrapper/public/: GLBoard.hpp  GLSnake.hpp  Shader.hpp
gfx_dynamic_libs/libs/: CMakeLists.txt
gfx_dynamic_libs/libs/private/: GlfwGraphic.cpp  GlfwGraphic.hpp  SFMLGraphic.hpp
gfx_dynamic_libs/libs/public/: IGraphic.hpp  IGraphicConstants.hpp  IGraphicTypes.hpp
gfx_dynamic_libs/loader/: CMakeLists.txt
gfx_dynamic_libs/loader/private/: gfx_loader.cpp
gfx_dynamic_libs/loader/public/: gfx_loader.hpp
gfx_dynamic_libs/shader/: CMakeLists.txt
gfx_dynamic_libs/shader/private/: Shader.cpp
gfx_dynamic_libs/shader/public/: Shader.hpp
gfx_dynamic_libs/test_binary_libs/private/: test_binary.cpp
ressources/shaders/draw_rectangle/: draw_rectangle_fs.glsl  draw_rectangle_gs.glsl  draw_rectangle_vs.glsl
ressources/shaders/font/: font_fs.glsl  font_vs.glsl
test_binary_libs/private/: test_binary.cpp
